--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ before_script:
   - cp config/database.yml.example config/database.yml
   - psql -c 'create database phonebanking_test;' -U postgres
   - psql -U postgres -q -d phonebanking_test -f db/structure.sql
+
+script: 'bundle exec rake'
