--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
-  - "2.1.3"
+  - "2.2.2"
 addons:
   postgresql: "9.3"
 before_script:
@@ -8,3 +8,4 @@ before_script:
   - psql -c 'create database phonebanking_test;' -U postgres
 
 script: 'xvfb-run bundle exec rake'
+sudo: false
